syntax = "proto3";

package billing.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "billing-service/api/billing/v1;v1";

// BillingService 计费服务（外部接口）
// 面向前端/开发者的接口
service BillingService {
  // 获取账户资产信息 (余额 + 剩余配额)
  rpc GetAccount(GetAccountRequest) returns (GetAccountReply) {
    option (google.api.http) = {
      get: "/api/v1/billing/account"
    };
  }

  // 发起充值 (返回支付链接)
  rpc Recharge(RechargeRequest) returns (RechargeReply) {
    option (google.api.http) = {
      post: "/api/v1/billing/recharge"
      body: "*"
    };
  }

  // 获取消费流水
  rpc ListRecords(ListRecordsRequest) returns (ListRecordsReply) {
    option (google.api.http) = {
      get: "/api/v1/billing/records"
    };
  }

  // 获取今日调用统计
  rpc GetStatsToday(GetStatsTodayRequest) returns (GetStatsReply) {
    option (google.api.http) = {
      get: "/api/v1/billing/stats/today"
    };
  }

  // 获取本月调用统计
  rpc GetStatsMonth(GetStatsMonthRequest) returns (GetStatsReply) {
    option (google.api.http) = {
      get: "/api/v1/billing/stats/month"
    };
  }

  // 获取汇总统计（所有服务）
  rpc GetStatsSummary(GetStatsSummaryRequest) returns (GetStatsSummaryReply) {
    option (google.api.http) = {
      get: "/api/v1/billing/stats/summary"
    };
  }
}

// BillingInternalService 计费内部服务（内部接口）
// 面向内部服务（Gateway/Payment）的接口
service BillingInternalService {
  // 检查并预扣费 (Check & Reserve)
  rpc CheckQuota(CheckQuotaRequest) returns (CheckQuotaReply) {
    option (google.api.http) = {
      post: "/internal/v1/billing/check"
      body: "*"
    };
  }

  // 确认扣费 (Commit)
  rpc DeductQuota(DeductQuotaRequest) returns (DeductQuotaReply) {
    option (google.api.http) = {
      post: "/internal/v1/billing/deduct"
      body: "*"
    };
  }

  // 充值回调 (来自 Payment Service)
  rpc RechargeCallback(RechargeCallbackRequest) returns (RechargeCallbackReply) {
    option (google.api.http) = {
      post: "/internal/v1/billing/callback"
      body: "*"
    };
  }
}

message GetAccountRequest {
  string userId = 1;
}

message GetAccountReply {
  string userId = 1;
  double balance = 2;
  repeated FreeQuota quotas = 3;
}

message FreeQuota {
  string serviceName = 1;
  int32 totalQuota = 2;
  int32 usedQuota = 3;
  string resetMonth = 4;
}

message RechargeRequest {
  string userId = 1;
  double amount = 2;
  string paymentMethod = 3; // wechat, alipay
  string currency = 4; // 币种，必填，例如：CNY, USD
}

message RechargeReply {
  string rechargeOrderId = 1; // 充值订单ID（billing-service生成，格式：recharge_{uid}_{timestamp}）
  string paymentUrl = 2; // 支付URL
}

message ListRecordsRequest {
  string userId = 1;
  int32 page = 2;
  int32 pageSize = 3;
}

message ListRecordsReply {
  repeated BillingRecord records = 1;
  int32 total = 2;
}

message BillingRecord {
  string id = 1;
  string serviceName = 2;
  int32 type = 3; // 1:免费额度, 2:余额扣费
  double amount = 4;
  int32 count = 5;
  google.protobuf.Timestamp createdAt = 6;
}

message CheckQuotaRequest {
  string userId = 1;
  string serviceName = 2;
  int32 count = 3;
}

message CheckQuotaReply {
  bool allowed = 1;
  string reason = 2;
}

message DeductQuotaRequest {
  string userId = 1;
  string serviceName = 2;
  int32 count = 3;
  double cost = 4;
}

message DeductQuotaReply {
  bool success = 1;
  string recordId = 2;
}

message RechargeCallbackRequest {
  string rechargeOrderId = 1; // 充值订单ID（billing-service生成，格式：recharge_{uid}_{timestamp}）
  string paymentId = 2; // 支付流水号（payment-service返回的payment_id）
  double amount = 3; // 充值金额
  string status = 4; // 支付状态
}

message RechargeCallbackReply {
  bool success = 1;
}

// 统计相关消息
message GetStatsTodayRequest {
  string userId = 1;
  string serviceName = 2; // 可选，不传则统计所有服务
}

message GetStatsMonthRequest {
  string userId = 1;
  string serviceName = 2; // 可选，不传则统计所有服务
}

message GetStatsSummaryRequest {
  string userId = 1;
}

message GetStatsReply {
  string userId = 1;
  string serviceName = 2; // 如果请求时指定了服务名称，这里返回；否则为空
  int32 totalCount = 3;   // 总调用次数
  double totalCost = 4;   // 总费用（仅余额扣费部分）
  int32 freeCount = 5;    // 免费额度使用次数
  int32 paidCount = 6;    // 余额扣费次数
  string period = 7;       // 统计周期：today 或 month
}

message ServiceStats {
  string serviceName = 1; // 服务名称
  int32 totalCount = 2;   // 总调用次数
  double totalCost = 3;   // 总费用
  int32 freeCount = 4;    // 免费额度使用次数
  int32 paidCount = 5;    // 余额扣费次数
}

message GetStatsSummaryReply {
  string userId = 1;
  int32 totalCount = 2;   // 所有服务总调用次数
  double totalCost = 3;   // 所有服务总费用
  repeated ServiceStats services = 4; // 各服务统计
}
