syntax = "proto3";
package kratos.api;

option go_package = "billing-service/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Billing billing = 3;
  PaymentService payment_service = 4;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
  Redis redis = 2;
}

message Billing {
  map<string, double> prices = 1;
  map<string, int32> free_quotas = 2;
}

message PaymentService {
  string grpc_addr = 1;
  google.protobuf.Duration timeout = 2;
  string return_url = 3;  // 支付成功后的返回URL
  string notify_url = 4;  // 支付回调通知URL
}
